--- a/NewsPortal/templates/post.html
+++ b/NewsPortal/templates/post.html
@@ -1,12 +1,17 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
-<!-- Название у нас будет Product -->
+<!-- Название у нас будет Новость/статья -->
 {% block title %}
 Новость/статья
 {% endblock title %}
 
-<!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
+<!-- В контенте на странице мы выводим саму новость/статью,
+ идентификатор которого был передан в url -->
 {% block content %}
-<h1>{{ post }}</h1>
+<h1>{{ post.title }}</h1>
+<h3>{{ post.add_date|date:'d.m.Y' }}</h3>
+<hr>
+<p>{{ post.text }}</p>
+
 {% endblock content %}
