--- a/NewsPortal/templates/flatpages/default.html
+++ b/NewsPortal/templates/flatpages/default.html
@@ -25,19 +25,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/goods1/">Goods1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/feedback/">Feedback</a>
+                            <a class="nav-link" href="/news/">News</a>
                         </li>
                     </ul>
                 </div>
